# errand-ai

./: .env.example  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-publish.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md
src/: main.py
src/agents/: __init__.py  apply_patch_agent.py  approval_agent.py  context_collector_agent.py  git_agent..py  git_agent.py  guardrail_agent.py  log_analyzer_agent.py  patch_generator_agent.py  refactor_agent.py  test_agent.py
src/application/: __init__.py  config.py  session_manager.py  state_machine.py  workflow_engine.py
src/domain/: __init__.py
src/domain/interfaces/: __init__.py  agent.py  ai_provider.py  guardrail.py  notifier.py  repository.py
src/domain/models/: __init__.py  approval.py  context_package.py  failure_analysis.py  guardrail_result.py  (+4 more)
src/infrastructure/: __init__.py
src/utils/: __init__.py  diff.py  logger.py  retry.py  timestamps.py
tests/: conftest.py  test_math.py
tests/agents/: test_approval_agent.py  test_context_collector_agent.py  test_git_agent.py  test_guardrail_agent.py  test_log_analyzer_agent.py  test_patch_generator_agent.py  test_refactor_agent.py  test_test_agent.py
tests/application/: test_session_manager.py  test_telegram.py
tests/infrastructure/: test_git_client.py  test_nvidia_nim.py
tests/unit_tests/: test_approval_agent.py  test_context_collector_agent.py  test_git_agent.py  test_git_client.py  test_guardrail_agent.py  test_log_analyzer_agent.py  test_patch_generator_agent.py  test_telegram.py  test_test_agent.py
(+14 files in other folders)
